<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.openmrs.module</groupId>
	<artifactId>pihcore</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>PIH Core Module</name>
	<description>Core metadata and configuration included in all PIH distributions</description>
	<url>https://wiki.openmrs.org/display/docs/PIH+Core+Module+Module</url>
	
	<developers>
		<developer>
			<name>PIH</name>
		</developer>
	</developers>
	
	<organization>
		<name>PIH</name>
		<url>http://pih.org</url>
	</organization>

	<scm>
		<connection>scm:git:git@github.com:PIH/openmrs-module-pihcore.git</connection>
		<developerConnection>scm:git:git@github.com:PIH/openmrs-module-pihcore.git</developerConnection>
		<url>scm:git:git@github.com:PIH/openmrs-module-pihcore.git</url>
	</scm>

	<distributionManagement>
		<repository>
			<id>openmrs-repo-modules</id>
			<name>Modules</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/modules/</url>
		</repository>
		<snapshotRepository>
			<id>openmrs-repo-snapshots</id>
			<name>OpenMRS Snapshots</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<modules>
		<module>api</module>
		<module>omod</module>
	</modules>

    <properties>
        <openMRSVersion>1.10.1</openMRSVersion>
        <openMRSwebVersion>1.10.1</openMRSwebVersion>
        <emrapiVersion>1.10-SNAPSHOT</emrapiVersion>
        <paperrecordVersion>1.0-SNAPSHOT</paperrecordVersion>
        <emrVersion>2.0-SNAPSHOT</emrVersion>
        <uiframeworkVersion>3.4-SNAPSHOT</uiframeworkVersion>
        <appframeworkVersion>2.4-SNAPSHOT</appframeworkVersion>
        <metadatasharingVersion>1.1.9</metadatasharingVersion>
        <metadatamappingVersion>1.0.1</metadatamappingVersion>
        <metadatadeployVersion>1.5</metadatadeployVersion>
        <htmlformentryVersion>2.6-SNAPSHOT</htmlformentryVersion>
        <htmlformentry19extVersion>1.5</htmlformentry19extVersion>
        <htmlformentryuiVersion>1.3-SNAPSHOT</htmlformentryuiVersion>
        <calculationVersion>1.1</calculationVersion>
        <reportingVersion>0.9.7-SNAPSHOT</reportingVersion>
        <reportinguiVersion>1.0-SNAPSHOT</reportinguiVersion>
        <reportingrestVersion>1.3-SNAPSHOT</reportingrestVersion>
        <htmlwidgetsVersion>1.6.4</htmlwidgetsVersion>
        <serializationxstreamVersion>0.2.8-SNAPSHOT</serializationxstreamVersion>
        <idgenVersion>4.0</idgenVersion>
        <namephoneticsVersion>1.5</namephoneticsVersion>
        <patientregistrationVersion>2.2-SNAPSHOT</patientregistrationVersion>
        <pacsintegrationVersion>1.1-SNAPSHOT</pacsintegrationVersion>
        <addresshierarchyVersion>2.7</addresshierarchyVersion>
        <providermanagementVersion>2.2</providermanagementVersion>
        <eventVersion>2.2.1</eventVersion>
        <logicVersion>0.5.2</logicVersion>
        <importpatientfromwsVersion>1.0-SNAPSHOT</importpatientfromwsVersion>
        <uilibraryVersion>1.5</uilibraryVersion>
        <appuiVersion>1.4-SNAPSHOT</appuiVersion>
        <dispensingVersion>1.0-SNAPSHOT</dispensingVersion>
        <uicommonsVersion>1.7-SNAPSHOT</uicommonsVersion>
        <registrationcoreVersion>1.2-SNAPSHOT</registrationcoreVersion>
        <registrationappVersion>1.3-SNAPSHOT</registrationappVersion>
        <radiologyappVersion>1.0-SNAPSHOT</radiologyappVersion>
        <coreappsVersion>1.7-SNAPSHOT</coreappsVersion>
        <webservicesRestVersion>2.12-SNAPSHOT</webservicesRestVersion>
        <appointmentschedulingVersion>1.2-SNAPSHOT</appointmentschedulingVersion>
        <appointmentschedulinguiVersion>1.0-SNAPSHOT</appointmentschedulinguiVersion>
        <testutilsVersion>1.6-SNAPSHOT</testutilsVersion>
        <printerVersion>1.2-SNAPSHOT</printerVersion>
        <!-- Need to phase this out. -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- Begin OpenMRS core -->

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.web</groupId>
            <artifactId>openmrs-web</artifactId>
            <version>${openMRSVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.test</groupId>
            <artifactId>openmrs-test</artifactId>
            <version>${openMRSVersion}</version>
            <type>pom</type>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.h2database</groupId>
                    <artifactId>h2</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>1.3.173</version>
            <scope>test</scope>
        </dependency>

        <!-- End OpenMRS core -->

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatasharing-api</artifactId>
            <version>${metadatasharingVersion}</version>
            <scope>provided</scope>
        </dependency>

		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>metadatadeploy-api</artifactId>
			<version>${metadatadeployVersion}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.openmrs.module</groupId>
			<artifactId>metadatadeploy-api-1.10</artifactId>
			<version>${metadatadeployVersion}</version>
			<scope>provided</scope>
		</dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatadeploy-api-1.10</artifactId>
            <version>${metadatadeployVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api-1.10</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api</artifactId>
            <version>${emrapiVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>addresshierarchy-api</artifactId>
            <version>${addresshierarchyVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>patientregistration-api</artifactId>
            <version>${patientregistrationVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>registrationcore-api</artifactId>
            <version>${registrationcoreVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>registrationapp-api</artifactId>
            <version>${registrationappVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>radiologyapp-api</artifactId>
            <version>${radiologyappVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>providermanagement-api</artifactId>
            <version>${providermanagementVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emr-api</artifactId>
            <version>${emrVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api-1.10</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>reporting-api</artifactId>
            <version>${reportingVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>calculation-api</artifactId>
            <version>${calculationVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>uiframework-api</artifactId>
            <version>${uiframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>idgen-api</artifactId>
            <version>${idgenVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>namephonetics-api</artifactId>
            <version>${namephoneticsVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>paperrecord-api</artifactId>
            <version>${paperrecordVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>printer-api</artifactId>
            <version>${printerVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>coreapps-api</artifactId>
            <version>${coreappsVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>pacsintegration-api</artifactId>
            <version>${pacsintegrationVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs</groupId>
            <artifactId>event-api</artifactId>
            <version>${eventVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>dispensing-api</artifactId>
            <version>${dispensingVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>appframework-api</artifactId>
            <version>${appframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentryui-api</artifactId>
            <version>${htmlformentryuiVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>appui-api</artifactId>
            <version>${appuiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <!-- TODO figure out why we still need the 1.9 subproject for testing-->
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api-1.9</artifactId>
            <version>${emrapiVersion}</version>
            <scope>test</scope>
        </dependency>


        <!-- Begin OpenMRS contrib -->

        <dependency>
            <groupId>org.openmrs.contrib</groupId>
            <artifactId>testutils</artifactId>
            <version>${testutilsVersion}</version>
            <scope>test</scope>
        </dependency>

        <!-- End OpenMRS contrib -->

        <!-- we explicitly use version 3.2.10 since 3.2.11 has a bug which was giving us issues,
            can probably remove this after next sass release -->
        <dependency>
            <groupId>rubygems</groupId>
            <artifactId>sass</artifactId>
            <version>3.2.10</version>
            <type>gem</type>
            <scope>provided</scope>
        </dependency>

    </dependencies>

	<build>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<target>1.6</target>
						<source>1.6</source>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.openmrs.maven.plugins</groupId>
					<artifactId>maven-openmrs-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<executions>
						<execution>
							<goals>
								<goal>test-jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.17</version>
					<configuration>
						<argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m</argLine>
						<includes>
							<include>**/*Test.java</include>
						</includes>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                    <allowSnapshots>true</allowSnapshots>
                    <properties>
                        <property>
                            <name>openMRSVersion</name>
                            <version>[1.9.0,1.10.0-!)</version>
                        </property>
                        <property>
                            <name>openMRSwebVersion</name>
                            <version>[1.9.0,1.10.0-!)</version>
                        </property>
                        <property>
                            <name>htmlwidgetsVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>metadatasharingVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>metadatamappingVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>calculationVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>namephoneticsVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>addresshierarchyVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>providermanagementVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>eventVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>logicVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>chartsearchVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>metadatadeployVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>idgenVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <!--      <property>
                                  <name>webservicesRestVersion</name>
                                  <banSnapshots>true</banSnapshots>
                              </property>-->
                    </properties>
                </configuration>
            </plugin>

        </plugins>

	</build>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
		</repository>
        <repository>
            <id>rubygems-releases</id>
            <url>http://rubygems-proxy.torquebox.org/releases</url>
        </repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

</project>
